--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Publish Docker Image to GitHub Registry
-      uses: TilBlechschmidt/gp-docker-action@v0.2-alpha
+    - name: Publish Docker
+      uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
-        github-token: ${{ secrets.PUSH_KEY }}
-        image-name: ik_ihe-music-simplified
+        name: ik_ihe-music
+        registry: ${{ secrets.DEPLOY_REPO }}
+        username: ${{ secrets.DEPLOY_USERNAME }}
+        password: ${{ secrets.DEPLOY_PASSWD }}
+        default_branch: master
