--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       with:
         name: ik_ihe-music
         registry: ${{ secrets.DEPLOY_REPO }}
-        username: ${{ secrets.DEPLOY_USERNAME }}
+        username: ${{ secrets.DEPLOY_USER }}
         password: ${{ secrets.DEPLOY_PASSWD }}
         default_branch: master
