--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       uses: elgohr/Publish-Docker-Github-Action@3.04
       with:
         name: ik_ihe-music
-        registry: ${{ secrets.DEPLOY_REPO }}
-        username: ${{ secrets.DEPLOY_USER }}
-        password: ${{ secrets.DEPLOY_PASSWD }}
+        registry: ${{ secrets.PUSH_REPO }}
+        username: ${{ secrets.PUSH_USER }}
+        password: ${{ secrets.PUSH_PASSWD }}
         default_branch: master
