--- a/IkIheMusicBotSimplified.csproj
+++ b/IkIheMusicBotSimplified.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0" />
+      <PackageReference Include="Discord.Net.WebSocket" Version="3.5.0" />
     </ItemGroup>
 
 </Project>
