--- a/IkIheMusicBotSimplified.csproj
+++ b/IkIheMusicBotSimplified.csproj
@@ -7,6 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Cymbal" Version="0.1.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0" />
     </ItemGroup>
 
